Added Dark/Light toggle button
Signed-off-by: Thomas Cooper <code@tomcooper.dev>

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OSSIP - Open Source Software Improvement Proposals</title>
     <link rel="stylesheet" href="style.css">
+    <script>(function(){var t=localStorage.getItem('ossip-theme');if(t==='light')document.documentElement.setAttribute('data-theme','light');})();</script>
 </head>
 
 <body class="index-page">
@@ -29,6 +30,7 @@
             <p>GitHub Repository: <a href="https://github.com/tomncooper/ossip">tomncooper/ossip</a></p>
         </div>
     </div>
+    <script src="assets/theme-toggle.js"></script>
 </body>
 
 </html>
