--- a/templates/flink-index.html.jinja
+++ b/templates/flink-index.html.jinja
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flink Improvement Proposals</title>
     <link rel="stylesheet" href="style.css">
+    <script>(function(){var t=localStorage.getItem('ossip-theme');if(t==='light')document.documentElement.setAttribute('data-theme','light');})();</script>
 </head>
 
 <body>
@@ -114,6 +115,7 @@
             ]
         });
     </script>
+    <script src="assets/theme-toggle.js"></script>
 </body>
 
 </html>
