--- a/templates/kip-more-info.html.jinja
+++ b/templates/kip-more-info.html.jinja
@@ -3,6 +3,7 @@
 <head>
     <title>Kafka Improvement Proposals</title>
     <link rel="stylesheet" href="../style.css">
+    <script>(function(){var t=localStorage.getItem('ossip-theme');if(t==='light')document.documentElement.setAttribute('data-theme','light');})();</script>
 </head>
 
 <body>
@@ -67,6 +68,7 @@
         </tr>
         {% endif %}
     </table>
+    <script src="../assets/theme-toggle.js"></script>
 </body>
 
 </html>
