Added ASF Tradmark icons and notice footers
Signed-off-by: Thomas Cooper <code@tomcooper.dev>

--- a/templates/flink-index.html.jinja
+++ b/templates/flink-index.html.jinja
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flink Improvement Proposals</title>
+    <title>Apache Flink Improvement Proposals</title>
     <link rel="stylesheet" href="style.css">
     <script>(function(){var t=localStorage.getItem('ossip-theme');if(t==='light')document.documentElement.setAttribute('data-theme','light');})();</script>
 </head>
 
 <body>
-    <h1>Flink Improvement Proposals (FLIPs)</h1>
+    <h1>Apache Flink&reg; Improvement Proposals (FLIPs)</h1>
     <div class="nav-bar">
         <div class="nav-item"><a href="index.html">Back to OSSIP</a></div>
         <div class="nav-item">GitHub Repository: <a href="https://github.com/tomncooper/ossip">tomncooper/ossip</a></div>
@@ -115,6 +115,7 @@
             ]
         });
     </script>
+    {% include '_footer.html' %}
     <script src="assets/theme-toggle.js"></script>
 </body>
 
