--- a/templates/flip-more-info.html.jinja
+++ b/templates/flip-more-info.html.jinja
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Flink Improvement Proposals</title>
+    <title>Apache Flink Improvement Proposals</title>
     <link rel="stylesheet" href="../style.css">
     <script>(function(){var t=localStorage.getItem('ossip-theme');if(t==='light')document.documentElement.setAttribute('data-theme','light');})();</script>
 </head>
@@ -62,6 +62,7 @@
         </tr>
         {% endif %}
     </table>
+    {% include '_footer.html' %}
     <script src="../assets/theme-toggle.js"></script>
 </body>
 
