--- a/templates/index.html
+++ b/templates/index.html
@@ -16,17 +16,20 @@
         <div class="projects">
             <a href="kafka.html" class="project-card kafka">
                 <img src="assets/images/kafka-logo-tall.png" alt="Apache Kafka Logo" class="logo">
-                <div class="project-name">Apache Kafka</div>
+                <div class="project-name">Apache Kafka&reg;</div>
             </a>
 
             <a href="flink.html" class="project-card flink">
                 <img src="assets/images/flink_squirrel.png" alt="Apache Flink Logo" class="logo">
-                <div class="project-name">Apache Flink</div>
+                <div class="project-name">Apache Flink&reg;</div>
             </a>
         </div>
 
-        <div class="footer">
-            <p>Created by <a href="https://tomcooper.dev">Tom Cooper</a></p>
+        <!-- Trademark footer (sync with templates/_footer.html for Jinja2 templates) -->
+        <div class="trademark-footer">
+            <p>Apache Kafka&reg;, Apache Flink&reg;, Kafka&reg;, Flink&reg;, Apache&reg;, the Apache feather logo, and the Apache Kafka and Apache Flink project logos are either registered trademarks or trademarks of The Apache Software Foundation in the United States and/or other countries. No endorsement by The Apache Software Foundation is implied by the use of these marks.</p>
+            <p>This site is not affiliated with, endorsed by, or part of The Apache Software Foundation. It is an independent community resource created by <a href="https://tomcooper.dev">Tom Cooper</a>.</p>
+            <p>Official project pages: <a href="https://kafka.apache.org">kafka.apache.org</a> | <a href="https://flink.apache.org">flink.apache.org</a></p>
             <p>GitHub Repository: <a href="https://github.com/tomncooper/ossip">tomncooper/ossip</a></p>
         </div>
     </div>
